# dgbit

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  docs.yml  publish.yml  test.yml
dgbit-api/: .env.example  README.md  pyproject.toml
dgbit-api/shared/python/: pyproject.toml
dgbit-api/shared/python/dgbit_core/: __init__.py  main.py
dgbit-api/shared/python/dgbit_core/backtesting/: backtester.py
dgbit-api/shared/python/dgbit_core/data/: data_fetcher.py  fetcher.py
dgbit-api/shared/python/dgbit_core/models/: predictor.py
dgbit-api/shared/python/dgbit_core/trading/: __init__.py  examples.py  position.py  realtime_trader.py  strategy.py
dgbit-api/src/dgbit_api/: __init__.py  main.py
dgbit-api/src/dgbit_api/api/: __init__.py  routes.py
dgbit-api/src/dgbit_api/core/: __init__.py  config.py  logging.py
dgbit-api/src/dgbit_api/db/: __init__.py  connection.py  models.py
dgbit-api/src/dgbit_api/domain/: __init__.py  jobs.py
dgbit-api/src/dgbit_api/infra/: __init__.py  messaging.py
dgbit-api/src/dgbit_api/services/: __init__.py  job_service.py
dgbit-api/src/dgbit_api/workers/: backtest_runner.py
dgbit-api/src/dgbit_cli/: __init__.py
dgbit-api/src/dgbit_data/: __init__.py  adapters.py  cache.py  client.py  models.py  service.py
dgbit-api/src/dgbit_data/adapters/: __init__.py  base.py  binance.py  bybit.py  coinbase.py  factory.py  okx.py
dgbit-api/src/dgbit_services/: __init__.py  data.py  events.py  execution.py  jobs.py  orchestrator.py  strategy.py
dgbit-api/tests/: conftest.py  test_adapters.py  test_api.py  test_backtester.py  test_position.py  test_predictor.py  test_services.py  test_strategy.py  test_strategy_registry.py
dgbit-ui/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dgbit-ui/src/: App.vue  main.ts
dgbit-ui/src/assets/: main.css
dgbit-ui/src/components/: JobCard.vue
dgbit-ui/src/composables/: useApi.ts
dgbit-ui/src/pages/: Backtests.vue  Dashboard.vue
dgbit-ui/src/router/: index.js  index.ts
dgbit-ui/src/services/: api.js  websocket.js
dgbit-ui/src/stores/: connection.js  jobs.ts  market.js  strategies.js  system.js  trading.js
dgbit-ui/src/styles/: tailwind.css
dgbit-ui/src/views/: Dashboard.vue  Portfolio.vue  Strategies.vue  System.vue  Trading.vue
docs/: ARCHITECTURE.md  ASSESSMENT.md  DEVELOPMENT_GUIDE.md  NNG_ARCHITECTURE.md  OPERATIONS.md  PLATFORM_PLAN.md  ROADMAP.md  STRATEGY_ARCHITECTURE.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/api/: index.md  python-sdk.md  rest-api.md  websocket.md
documentation/docs/architecture/: data-flow.md  index.md  overview.md  service-bus.md
documentation/docs/deployment/: docker.md  index.md  monitoring.md  production.md
documentation/docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
documentation/docs/guides/: backtesting.md  custom-strategies.md  index.md  live-trading.md  strategies.md
documentation/docs/reference/: changelog.md  configuration.md  index.md  strategies-ref.md
