[tool.poetry]
name = "dgbit-api"
version = "0.1.0"
description = "FastAPI service and background workers for the dgbit platform"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "dgbit_api", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pynng = "^0.8.2"
pydantic-settings = "^2.5.2"
dgbit-core = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
