[tool.poetry]
name = "dgbit-core"
version = "0.1.0"
description = "Core trading logic for dgbit"
authors = ["dgbit"]
packages = [{ include = "dgbit_core" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.26.0"
pybit = "^5.0.0"
pywavelets = "^1.5.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
